# phone-numbers-beautifier

./: .gitignore  Dockerfile  README.md  pyproject.toml
backend/: Makefile  pyproject.toml
backend/src/: main.py
backend/src/api/: router.py
backend/src/api/excel/: handle_excel.py  router.py
backend/src/api/os/: handle_os.py  router.py
backend/src/api/reminders/: handle_reminders.py  router.py
backend/src/api/root/: root.py  router.py
backend/src/api/tzb/: handle_tzb.py  router.py
backend/src/api/tzb_template/: handle_tzb_template.py  router.py
backend/src/core/beautifier/: beautifier.py  beautifier_os.py  beautifier_tzb.py
backend/src/core/config_maker/: os_config_maker.py  tzb_config_maker.py
backend/src/core/config_storage/: config_storage.py
backend/src/core/excel_handler/: excel_handler.py
backend/src/core/gender_age_extender/: gender_age_extender.py
backend/src/core/os_handler/: os_handler.py
backend/src/core/quotas_filter/: quotas_filter.py
backend/src/core/quotas_parser/: quotas_parser.py
backend/src/core/reminders_handler/: reminders_handler.py
backend/src/core/tzb_checker/: tzb_checker.py
backend/src/core/tzb_filter/: tzb_filter.py
backend/src/core/tzb_handler/: tzb_handler.py
backend/src/core/tzb_template_handler/: tzb_template_handler.py
backend/src/core/tzb_template_parser/: tzb_template_parser.py
backend/src/tests/beautifier/: fixtures.py  mocks.py  test_beautifier_os.py  test_beautifier_tzb.py
backend/src/tests/gender_age_extender/: fixtures.py  test_gender_age_extender.py
deploy/: Dockerfile  deployment.yaml  (+2 more)
(+31 files in other folders)
