[tool.poetry]
name = "phone-numbers-beautifier-backend"
version = "0.1.0"
description = ""
authors = ["Michael Tenetko <tenetko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "^0.103.2"
python-multipart = "^0.0.6"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
uvicorn = "^0.23.2"
fastapi-utils = "^0.2.1"
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
